@@ -1,3 +1,11 @@
+2008-04-17  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Lincoln de Sousa <lincoln@minaslivre.org>
+
+	* gnome-wp-xml.c (gnome_wp_file_changed), (gnome_wp_xml_add_monitor),
+	(gnome_wp_xml_load_from_dir), (gnome_wp_xml_load_list): replace gnome-vfs by
+	gio (part of bug #524401)
+
 2008-04-14  Thomas Wood  <thos@gnome.org>
 
 	* Makefile.am:
